added cloudfront vs S3

--- a/docs/storage/s3.md
+++ b/docs/storage/s3.md
@@ -23,3 +23,10 @@
 - cold data stored in Glacier can now be easily queried within minutes.
 - This unlocks a lot of exciting new business value for your archived data. 
 - Glacier Select allows you to to perform filtering directly against a Glacier object using standard SQL statements.
+
+## S3 Cross-Region
+
+> Suitable for dynamic content that needs to be served closer to multi-region consumers. Cloudfront data is cached for a day (typically), so not suitable for dynamic content.
+
+> The cost coming out of CloudFront is typically half a cent less per GB than data transfer for the same tier and Region. 
+> What this means is that you can take advantage of the additional performance and security of CloudFront by putting it in front of your Application Load Balancers (ALB), AWS Elastic Beanstalk, Amazon S3, and other AWS resources delivering HTTP(S) objects for next to no additional cost.
