--- a/docs/storage/s3.md
+++ b/docs/storage/s3.md
@@ -24,6 +24,8 @@
 - This unlocks a lot of exciting new business value for your archived data. 
 - Glacier Select allows you to to perform filtering directly against a Glacier object using standard SQL statements.
 
+> **Glacier Vault with read-only vault lock policy can protect logs from tampering.**
+
 ## S3 Cross-Region
 
 > Suitable for dynamic content that needs to be served closer to multi-region consumers. Cloudfront data is cached for a day (typically), so not suitable for dynamic content.
