added hybrid networking notes

--- a/docs/storage/s3.md
+++ b/docs/storage/s3.md
@@ -32,3 +32,5 @@
 
 > The cost coming out of CloudFront is typically half a cent less per GB than data transfer for the same tier and Region. 
 > What this means is that you can take advantage of the additional performance and security of CloudFront by putting it in front of your Application Load Balancers (ALB), AWS Elastic Beanstalk, Amazon S3, and other AWS resources delivering HTTP(S) objects for next to no additional cost.
+
+> To compare the general upload speed **across Amazon S3 Regions**, you can use the Amazon S3 Transfer Acceleration Speed Comparison tool.
