--- a/docs/storage/s3.md
+++ b/docs/storage/s3.md
@@ -34,3 +34,25 @@
 > What this means is that you can take advantage of the additional performance and security of CloudFront by putting it in front of your Application Load Balancers (ALB), AWS Elastic Beanstalk, Amazon S3, and other AWS resources delivering HTTP(S) objects for next to no additional cost.
 
 > To compare the general upload speed **across Amazon S3 Regions**, you can use the Amazon S3 Transfer Acceleration Speed Comparison tool.
+
+## Block Public Access
+
+### Ignore Public ACLs
+- Setting this option to TRUE causes Amazon S3 to ignore all public ACLs on a bucket and any objects that it contains. 
+- This setting enables you to **safely block public access granted by ACLs** while still allowing PUT Object calls that include a public ACL (as opposed to BlockPublicAcls, which rejects PUT Object calls that include a public ACL). 
+- Enabling this setting doesn't affect the persistence of any existing ACLs and doesn't prevent new public ACLs from being set.
+
+### Block Public ACLs
+- PUT Bucket acl and PUT Object acl calls fail if the specified access control list (ACL) is public.
+- PUT Object calls fail if the request includes a public ACL.
+- If this setting is applied to an account, then PUT Bucket calls fail if the request includes a public ACL.
+
+> This setting enables you to protect against public access while allowing you to audit, refine, or otherwise alter the existing policies and ACLs for your buckets and objects.
+
+### Block Public Policy
+- Setting this option to TRUE for a bucket causes Amazon S3 to reject calls to PUT Bucket policy if the specified bucket policy allows public access, and to reject calls to PUT access point policy for all of the bucket's access points if the specified policy allows public access. 
+- This setting enables you to allow users to manage access point and bucket policies without allowing them to publicly share the bucket or the objects it contains. Enabling this setting doesn't affect existing access point or bucket policies.
+
+### Restrict Public Buckets
+- Setting this option to TRUE restricts access to an access point or bucket with a public policy to only AWS service principals and authorized users within the bucket owner's account. 
+- This setting blocks all cross-account access to the access point or bucket (except by AWS service principals), while still allowing users within the account to manage the access point or bucket.
