--- a/docs/storage/s3.md
+++ b/docs/storage/s3.md
@@ -34,3 +34,11 @@
 > What this means is that you can take advantage of the additional performance and security of CloudFront by putting it in front of your Application Load Balancers (ALB), AWS Elastic Beanstalk, Amazon S3, and other AWS resources delivering HTTP(S) objects for next to no additional cost.
 
 > To compare the general upload speed **across Amazon S3 Regions**, you can use the Amazon S3 Transfer Acceleration Speed Comparison tool.
+
+## Lifecycle policies
+
+Incomplete Multipart Uploads – S3’s multipart upload feature accelerates the uploading of large objects by allowing you to split them up into logical parts that can be uploaded in parallel.  If you initiate a multipart upload but never finish it, the in-progress upload occupies some storage space and will incur storage charges. However, these uploads are not visible when you list the contents of a bucket and (until today’s release) had to be explicitly removed.
+
+Expired Object Delete Markers – S3’s versioning feature allows you to preserve, retrieve, and restore every version of every object stored in a versioned bucket. When you delete a versioned object, a delete marker is created. If all previous versions of the object subsequently expire, an expired object delete marker is left. These markers do not incur storage charges. However, removing unneeded delete markers can improve the performance of S3’s LIST operation.
+
+> You can exercise additional control over these objects using some new lifecycle rules, lowering your costs and improving performance in the process. 
