--- a/docs/storage/s3.md
+++ b/docs/storage/s3.md
@@ -42,3 +42,13 @@ Incomplete Multipart Uploads – S3’s multipart upload feature accelerates the
 Expired Object Delete Markers – S3’s versioning feature allows you to preserve, retrieve, and restore every version of every object stored in a versioned bucket. When you delete a versioned object, a delete marker is created. If all previous versions of the object subsequently expire, an expired object delete marker is left. These markers do not incur storage charges. However, removing unneeded delete markers can improve the performance of S3’s LIST operation.
 
 > You can exercise additional control over these objects using some new lifecycle rules, lowering your costs and improving performance in the process. 
+
+## Replication
+
+- For both cross-region and same-region replication, Versioning must be enabled.
+
+## Encryption
+- SSE-S3: S3 managed keys
+- SSE-KMS: Keys are managed in KMS
+- SSE-C: Can be own keys or KMS keys, but encryption happens at the client side.
+- Prevent upload of unencrypted objects through policies. Condition: _s3:x-amz-server-side-encryption_. AES256: SSE-S3 or KMS: KMS
