--- a/docs/storage/s3.md
+++ b/docs/storage/s3.md
@@ -52,3 +52,4 @@ Expired Object Delete Markers – S3’s versioning feature allows you to preser
 - SSE-KMS: Keys are managed in KMS
 - SSE-C: Can be own keys or KMS keys, but encryption happens at the client side.
 - Prevent upload of unencrypted objects through policies. Condition: _s3:x-amz-server-side-encryption_. AES256: SSE-S3 or KMS: KMS
+- Default encryption can be enabled for a bucket (as either SSE-S3 or SSE-KMS)
