--- a/docs/storage/s3.md
+++ b/docs/storage/s3.md
@@ -53,3 +53,20 @@ Expired Object Delete Markers – S3’s versioning feature allows you to preser
 - SSE-C: Can be own keys or KMS keys, but encryption happens at the client side.
 - Prevent upload of unencrypted objects through policies. Condition: _s3:x-amz-server-side-encryption_. AES256: SSE-S3 or KMS: KMS
 - Default encryption can be enabled for a bucket (as either SSE-S3 or SSE-KMS)
+
+## S3 Transfer Acceleration 
+
+Use Cases:
+
+- You have customers that upload to a centralized bucket from all over the world.
+- You transfer gigabytes to terabytes of data on a regular basis across continents.
+- You are unable to utilize all of your available bandwidth over the Internet when uploading to Amazon S3.
+
+You can transfer data to and from the acceleration-enabled bucket by using one of the following s3-accelerate endpoint domain names:
+
+- s3-accelerate.amazonaws.com: to access an acceleration-enabled bucket.
+- s3-accelerate.dualstack.amazonaws.com: to access an acceleration-enabled bucket over IPv6. Amazon S3 dual-stack endpoints support requests to S3 buckets over IPv6 and IPv4.
+
+### Transfer Acceleration vs Multi-part Upload
+
+- For users distributed across the world (or regions) but accessing a centralized bucket, Transfer Acceleration is preferred since it uses AWS backbone network which can optimize the transfer from far away regions.
