--- a/docs/storage/s3.md
+++ b/docs/storage/s3.md
@@ -70,3 +70,14 @@ You can transfer data to and from the acceleration-enabled bucket by using one o
 ### Transfer Acceleration vs Multi-part Upload
 
 - For users distributed across the world (or regions) but accessing a centralized bucket, Transfer Acceleration is preferred since it uses AWS backbone network which can optimize the transfer from far away regions.
+
+## Website Hosting
+
+- When you configure an Amazon S3 bucket for website hosting, _you must give the bucket the same name as the record that you want to use to route traffic to the bucket_.
+
+### Troubleshooting
+
+If you want to route traffic to an S3 bucket that is configured for website hosting but the name of the bucket doesn't appear in the Alias Target list in the Amazon Route 53 console, check the following:
+
+- The name of the bucket exactly matches the name of the record.
+- The S3 bucket is correctly configured for website hosting. I.e. Public READ has been configured properly.
